test: Add comprehensive unit tests
- Add unit tests for entities, DTOs, services, and controllers across multiple domains (Ad, Auth, Board, Comment, etc.)
- Update existing tests to improve coverage and fix logic (PostService, UserService, etc.)
- Refactor AdResponse to Java Record